--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <script src="js/queryCtrl.js"></script>
 </head>
 
-<body ng-controller="addCtrl">
+<body>
 <!--[if lt IE 10]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
