Added bulk of comments

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!-- Declares meanMapApp as the starting Angular module -->
 <html class="no-js" ng-app="meanMapApp">
 <head>
     <meta charset="utf-8">
@@ -36,7 +37,7 @@
 <![endif]-->
 
 <div class="container">
-    <!-- Header Menu  -->
+    <!-- Header Menu. Note use of headerCtrl -->
     <div class="header" ng-controller="headerCtrl">
 
         <!-- Header items are made active upon selection -->
